# ckb-treasury-lab

./: AGENTS.md  README.md
docs/: benchmark.md  proposal-type-script.md  treasury-lock-spec.md  vote-type-script.md
impl/: Cargo.toml  Makefile
impl/contracts/vote-type-script/: Cargo.toml  Makefile  README.md
impl/contracts/vote-type-script/src/: main.rs
impl/deployment/devnet/always-success/: deploy.sh  deployment.toml
impl/deployment/devnet/always-success/migrations/: 2026-07-15-011517.json
impl/deployment/devnet/vote-type-script/: deploy.sh  deployment.toml
impl/deployment/devnet/vote-type-script/migrations/: 2026-07-15-011624.json
impl/devnet/: .gitignore  ckb.toml  default.db-options
impl/devnet/specs/: dev.toml
impl/e2e/: .gitignore  AGENTS.md  README.md  benchmark.sh  dao-deposit.sh  dao-query-deposited.sh  env.sh  probe.sh  run-devnet-skip-checking.sh  run-devnet.sh  start-ckb-cli.sh  start.sh
impl/e2e/.ckb-cli/keystore/: UTC--2026-06-08T03-42-37.506320000Z--c8328aabcd9b9e8e64fbc566c4385c3bdeb219d7
impl/scripts/: find_clang
impl/sdk/: .gitignore  .npmrc  AGENTS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
impl/sdk/src/: codec.ts  config.ts  index.ts  proposal.ts  utils.ts  vote.ts
impl/sdk/src/cli/: index.ts  shared.ts
impl/sdk/src/cli/commands/: check.ts  consume-proposal.ts  create-proposal.ts  query.ts  vote.ts
