[package]
name = "vote-type-script"
version = "0.1.0"
edition = "2024"

[dependencies]
ckb-std = "1.1"

ckb-gen-types = { package = "ckb-gen-types", default-features = false, git = "https://github.com/XuJiandong/ckb.git", rev = "d840629" }
ckb-hash = { package = "ckb-hash",  default-features = false, features = ["ckb-contract",], git = "https://github.com/XuJiandong/ckb.git",rev = "d840629" }

molecule = { version = "0.9.2", default-features = false }

